Final Code Set-up. Got the schema in the "/" path to generate a swagger doc without xml in it.
